Wed Apr 26 23:43:25 2000  Christopher Faylor <cgf@cygnus.com>

	* mount.cc (main): Add "-X" option to specify a "Cygwin executable".

Sat Apr 15 23:34:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* mkpasswd.c (main): Use GetDCName instead of GetAnyDCName.
	Don't create extra passwd entry for administrators group
	if local_groups is set.
	(usage): Change usage text slightly.
	(enum_users): Loop while ERROR_MORE_DATA is returned.
	(enum_local_groups): Ditto.
	* mkgroup.c (enum_local_groups): Ditto.
	(enum_groups) Ditto.
	(usage): Change usage text slightly.

Thu Apr 13 01:22:35 2000  Christopher Faylor <cgf@cygnus.com>

	* cygpath.cc (main): Add -a -o and -c options.
	(doit): Ditto.

Mon Apr 10 22:56:07 2000  Christopher Faylor <cgf@cygnus.com>

	* cygpath.cc (main): Add -f option for processing a group of paths from
	a file.
	(doit): New function.

Sat Mar 18 22:52:37 2000  Christopher Faylor <cgf@cygnus.com>

	Patch suggested by Mumit Khan  <khan@xraylith.wisc.edu>:
	* strace.cc (_impure_ptr): New global variable to make strace build
	under Cygwin gcc.

Sat Mar 18 12:45:10 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Make CXXFLAGS consistent with cygwin.

Wed Mar 15 00:53:58 2000  Christopher Faylor <cgf@cygnus.com>

	* Makefile.in: Use MINGW_CXXFLAGS when compiling strace.

Sun Mar 12 21:22:25 2000  Christopher Faylor <cgf@cygnus.com>

	* strace.cc: Throughout, track information like start_time, etc.  on a
	per-process basis.

Sun Feb 27 23:37:32 2000  Christopher Faylor <cgf@cygnus.com>

	* strace.cc (handle_output_debug_string): Parse strace output to allow
	various types of time output.

Fri Jan 21 02:10:26  Corinna Vinschen  <corinna@vinschen.de>

	* utils/regtool.cc (translate): Added unix like backslash
	processing.

2000-01-20  Corinna Vinschen  <corinna@vinschen.de>

	* regtool.cc: allow forward slashes as key separators

2000-01-19  DJ Delorie  <dj@redhat.com>

	* regtool.cc: New file.
	* Makefile.in: add regtool